<resources>
    <string name="app_name">Cloud Engine</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_fullname">Nombre completo</string>
    <string name="prompt_age">Edad</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="action_registro">Registrate</string>
    <string name="action_registro_corto">Registrate</string>
    <string name="welcome">"¡Bienvenido! "</string>
    <string name="registrarse">Registrate</string>
    <string name="invalid_username">Usuario invalido</string>
    <string name="invalid_password">La canción debe tener >5 caracteres</string>
    <string name="login_failed">"Inicio fallido"</string>
</resources>